--- a/estate/views/res_groups.xml
+++ b/estate/views/res_groups.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        
+        <record id="xxx" model="res.groups">
+            <field name="amount_max" type="xml">
+    
+        </record>
     </data>
 </odoo>
