--- a/estate/views/sale_order.xml
+++ b/estate/views/sale_order.xml
@@ -9,9 +9,9 @@
                 <xpath expr="/form/sheet/notebook/page/field[@name='order_line']/tree/field[@name='tax_id']" position="after">
                     <field name="training_date"/>
                 </xpath>
-                 <xpath expr="/form/sheet/notebook/page/field[@name='order_line']/tree/field[@name='tax_id']" position="after">
+                <!-- <xpath expr="/form/sheet/notebook/page/field[@name='order_line']/tree/field[@name='tax_id']" position="after">
                     <field name="Employee"/>
-                </xpath>
+                </xpath>-->
             </field>
         </record>
     </data>
